@@ -54,7 +54,7 @@ public class ServiceContainer implements Container {
         ClassLoader loader = Thread.currentThread().getContextClassLoader();
         try {
             Class<?> c = loader.loadClass(dispatcherFactoryProperty.value);
-            dispatcherFactory = (LocalDispatcherFactory) c.newInstance();
+            dispatcherFactory = (LocalDispatcherFactory) c.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new ContainerException(e);
         }
