@@ -33,12 +33,9 @@ public final class WidgetContentWorker {
         try {
             ClassLoader loader = Thread.currentThread().getContextClassLoader();
             // note: loadClass is necessary for these since this class doesn't know anything about them at compile time
-            contentWorker = (ContentWorkerInterface) loader.loadClass("org.apache.ofbiz.content.content.ContentWorker").newInstance();
-        } catch (ClassNotFoundException e) {
-            Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
-        } catch (IllegalAccessException e) {
-            Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
-        } catch (InstantiationException e) {
+            Class<?> c = loader.loadClass("org.apache.ofbiz.content.content.ContentWorker");
+            contentWorker = (ContentWorkerInterface) c.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
         }
     }
